--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,9 +12,6 @@ en:
       remote_accounts:
         new:
           title: Connect A New External Portal Account
-        register:
-          register_html: To synchronize with External Portal, you previously need to %{email_link}
-          email_link_title: contact them using this email
         form:
           submit_new: Connect This External Portal Account
 
@@ -24,7 +21,8 @@ en:
 
       rentals:
         index:
-          all_synchronized: Perfect! All your rentals are synchronized.
+          rentals:
+            all_synchronized: Perfect! All your rentals are synchronized.
           create_listings_first: You must create your listings on External Portal before you can synchronize them automatically.
           connect_accounts: Add External Portal Account
         rental:
