--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,7 @@ en:
           connect: Connect
           bookingsync_header: "BookingSync: %{account_name}"
           all_synchronized: Perfect! All your rentals are synchronized.
+          no_published_rentals_html: 'No published rentals present, please make sure to <a href="https://www.bookingsync.com/en/admin/v2/%{id}/rentals" target="_blank">fill all your rentals details</a>.'
           create_listings_first: You must create your rentals on Remote Account before you can synchronize them automatically.
           connect_accounts: Add External Portal Account
           remote_header: "Remote Account: %{account_name}"
