handle multiple remote accounts in portal app ui

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,8 @@ en:
           listing_id: "Listing #%{id}"
 
       rentals:
+        new_remote_account:
+          connect_accounts: Connect additional accounts
         index:
           connect: Connect
           bookingsync_header: "BookingSync: %{account_name}"
