Use core data for surface unit instead of hardcoding metric ones

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,8 +65,8 @@ en:
             other: '<strong>%{count}</strong> People'
           surface_html:
             zero: ''
-            one: '<span>Surface</span> <strong>%{count}m²</strong>'
-            other: '<span>Surface</span> <strong>%{count}m²</strong>'
+            one: '<span>Surface</span> <strong>%{count}%{unit}</strong>'
+            other: '<span>Surface</span> <strong>%{count}%{unit}<</strong>'
           no_name: Unnamed rental
         remote_rental:
           no_name: Unnamed remote rental
