--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,7 +66,7 @@ en:
           surface_html:
             zero: ''
             one: '<span>Surface</span> <strong>%{count}%{unit}</strong>'
-            other: '<span>Surface</span> <strong>%{count}%{unit}<</strong>'
+            other: '<span>Surface</span> <strong>%{count}%{unit}</strong>'
           no_name: Unnamed rental
         remote_rental:
           no_name: Unnamed remote rental
