Add ransack and kaminari gem dependencies
Add list-backend-filter js class to use backend search if use_paginated_view flag is enabled

Add loading.hbs and pagination.hbs templates

Add back-end search engine to handle search + pagination requests in app/controllers/bookingsync_portal/admin/rentals_controller.rb

Add index_with_search.js.erb view + locales + default settings

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,6 +53,7 @@ en:
         rentals:
           no_published_rentals_html: 'No published rentals present, please make sure to <a href="https://www.bookingsync.com/en/admin/v2/%{id}/rentals" target="_blank">fill all your rentals details</a>.'
           all_synchronized: Perfect! All your rentals are synchronized.
+          no_results: No results
         rental:
           bedrooms_html:
             one: '<strong>1</strong> Bedroom'
